--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@
 .header {
   display: flex;
   width: 100%;
-  background: var(--secondary);
+  background: linear-gradient(to bottom, #121e3c, var(--background));
   justify-content: space-between;
   align-items: center;
   height: 85px;
@@ -122,7 +122,10 @@ main {
   width: 80%;
   min-width: 500px;
   font-weight: 800;
-  color: var(--text-white);
+  background: linear-gradient(to bottom, var(--primary), var(--text-white));
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 .zona-info p > span{
@@ -183,6 +186,7 @@ main {
     border-radius: 20px;
     width: 650px;
   }
+
 .zona-card-grafic{
   display: flex;
   flex-direction: column; 
@@ -213,7 +217,7 @@ main {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  gap: 35px;
+  gap: 60px;
 }
 
 
@@ -222,7 +226,7 @@ main {
   font-size: 40px;
   width: 100%;
   min-width: 500px;
-  font-weight: 700;
+  font-weight: 800;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -256,3 +260,209 @@ main {
   color: var(--electric);
 }
 
+#card{
+  padding: 70px 0;
+  max-width: 1200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 60px;
+}
+
+.card-titulo h2{
+  font-size: 40px;
+  width: 100%;
+  min-width: 500px;
+  font-weight: 800;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--text-white);
+}
+
+.cards-conteiner{
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+.info-cards{
+  width: 300px;
+  height: 400px;
+  padding: 40px 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  border-radius: 10mm;
+  background-color: var(--secondary);
+  gap: 20px;
+}
+
+.info-cards img{
+  width: 120px;
+}
+
+.info-cards h3{
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.info-cards p{
+  font-weight: 300;
+  font-size: 18px;
+  color: var(--text-gray);
+}
+
+#discover{
+  padding: 70px 0;
+  max-width: 1200px;
+  gap: 20px;
+}
+
+.discover-info{
+  display: flex;
+  justify-content: center;
+  gap: 18px;
+  margin-bottom: 50px;
+}
+
+.discover-info h2{
+  font-size: 32px;
+  width: 45%;
+  font-weight: 800;
+}
+
+.discover-text{
+  display: flex;
+  flex-direction: column;
+  width: 45%;
+  gap: 20px;
+}
+
+.discover-info p{
+  font-size: 16px;
+  font-weight: 300;
+  color: var(--text-gray);
+}
+
+.discover-text a{
+  color: var(--electric);
+  font-weight: 600;
+  text-decoration:underline;
+}
+
+
+
+footer{
+  background-color: var(--background);
+  color: var(--text-white);
+  display: flex;  
+  justify-content:center;
+  align-items:center;
+  flex-direction: column;
+  
+  gap: 40px;
+  padding: 60px 0;
+}
+
+.contacto{
+  display: flex;
+  padding: 50px;
+  flex-direction: column;
+  justify-content: center;
+  gap: 50px;
+  
+}
+
+.oficinas{
+  display: flex;
+  gap: 50px;
+}
+
+.oficinas-info{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.img-contacto{
+    width: 480px;
+    background-color: var(--secondary);
+    padding: 20px;
+    border-radius: 20px;    
+    display: flex;
+    
+    gap: 20px;
+}
+
+.img-contacto img{
+  border-radius: 20px;
+  width: 450px;
+  height: 300px;
+}
+
+.redes{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+}
+
+.redes a:hover {
+  transform: scale(1.2);
+}
+
+
+
+footer a{
+  color: var(--text-gray);
+  font-weight: 200;
+  font-size: 15px;
+}
+
+.footer-end{
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+.footer-links ul{
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.footer-links  li:hover{
+  transform: scale(1.2);
+}
+
+.footer-links{
+  color: var(--electric);
+}
+
+.contacto h2{
+  font-size: 40px;
+  width: 100%;
+  min-width: 500px;
+  font-weight: 800;
+}
+
+.oficinas-info h3{
+  font-weight: 800;
+}
+
+.footer-img img{
+  width: 150px;
+}
+
+#menu-toggle{
+  display: none;
+}
+
+#menu-toggle:checked + .nav-links{
+  display: flex;
+}
